--- a/tea-debug-demo/package.json
+++ b/tea-debug-demo/package.json
@@ -6,7 +6,7 @@
       "start": "node src/index.js"
     },
     "dependencies": {
-      "easy-debug": "^1.0.0",
+      "tea-easy-debug": "^1.0.0",
       "express": "^4.18.2",
       "@sentry/node": "^7.50.0",
       "commander": "^9.4.1"
