--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
     "name": "tea-tea-easy-debug",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Ultimate error handling and debugging library for Node.js, frontend, smart contracts, and tea Protocol",
     "main": "src/core/index.js",
     "bin": {
-      "tea-easy-debug": "./bin/tea-easy-debug.js"
+        "tea-easy-debug": "bin/tea-easy-debug.js"
     },
     "scripts": {
-      "test": "jest",
-      "build": "node scripts/build.js",
-      "publish": "npm publish --access public"
+        "test": "jest",
+        "build": "node scripts/build.js",
+        "publish": "npm publish --access public"
     },
-    "keywords": ["debug", "error-handling", "logging", "telemetry", "ai", "tea-protocol"],
+    "keywords": [
+        "debug",
+        "error-handling",
+        "logging",
+        "telemetry",
+        "ai",
+        "tea-protocol"
+    ],
     "author": "Kharisma Prams",
     "license": "MIT",
     "dependencies": {
-      "@sentry/node": "^7.50.0",
-      "commander": "^9.4.1"
+        "@sentry/node": "^7.50.0",
+        "commander": "^9.4.1"
     },
     "devDependencies": {
-      "jest": "^29.5.0",
-      "express": "^4.18.2",
-      "supertest": "^6.3.3",
-      "hardhat": "^2.17.0",
-      "next": "^13.4.0",
-      "eslint": "^8.28.0",
-      "prettier": "^2.8.0"
+        "jest": "^29.5.0",
+        "express": "^4.18.2",
+        "supertest": "^6.3.3",
+        "hardhat": "^2.17.0",
+        "next": "^13.4.0",
+        "eslint": "^8.28.0",
+        "prettier": "^2.8.0"
     },
     "repository": {
-      "type": "git",
-      "url": "https://github.com/kharismaprams/tea-tea-easy-debug.git"
+        "type": "git",
+        "url": "https://github.com/kharismaprams/tea-tea-easy-debug.git"
     }
-  }
+}
