--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "tea-easy-debug",
-    "version": "1.0.1",
+    "version": "1.0.3",
     "description": "Ultimate error handling and debugging library for Node.js, frontend, smart contracts, and tea Protocol",
     "main": "src/core/index.js",
     "bin": {
-        "tea-easy-debug": "bin/tea-easy-debug.js"
+        "tea-easy-debug": "./bin/tea-easy-debug.js"
     },
     "scripts": {
         "test": "jest",
