--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tea-easy-debug",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "description": "Ultimate error handling and debugging library for Node.js, frontend, smart contracts, and tea Protocol",
     "main": "src/core/index.js",
     "bin": {
@@ -23,16 +23,17 @@
     "license": "MIT",
     "dependencies": {
         "@sentry/node": "^7.50.0",
-        "commander": "^9.4.1"
+        "commander": "^9.4.1",
+        "tea-easy-debug": "^1.0.3"
     },
     "devDependencies": {
-        "jest": "^29.5.0",
-        "express": "^4.18.2",
-        "supertest": "^6.3.3",
-        "hardhat": "^2.17.0",
-        "next": "^13.4.0",
         "eslint": "^8.28.0",
-        "prettier": "^2.8.0"
+        "express": "^4.18.2",
+        "hardhat": "^2.17.0",
+        "jest": "^29.5.0",
+        "next": "^13.4.0",
+        "prettier": "^2.8.0",
+        "supertest": "^6.3.3"
     },
     "repository": {
         "type": "git",
